# wasmCanvasTest

./: Cargo.toml  index.html  index.js  package-lock.json  package.json  style.css
pkg/: canvas.d.ts  canvas.js  canvas_bg.js  canvas_bg.wasm  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
src/: lib.rs
